Fixed issue #1
